<resources>
    <string name="app_name">imhungry</string>

    <!-- Notification strings -->
    <string name="primary_notification_channel_id">HUNGRY_CHANNEL</string>
    <string name="primary_notification_channel_description">imhungry info</string>
    <string name="primary_notification_channel_name">imhungry notifications</string>

    <!-- Firebase auth strings -->
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="action_bar_settings_label">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="description_logo_imhungry">imhungry Logo</string>

    <!-- Bottom Navigation Bar strings -->
    <string name="navigation_more">More</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_calendar">Calendar</string>

    <!-- Settings -->
    <string name="settings_summary_template_loggedin">You are logged in as\n%1$s</string>
    <string name="settings_summary_loggedout">You are logged out</string>
    <string name="settings_title_login">Log in</string>
    <string name="settings_title_logout">Log out</string>
    <string name="settings_user_state">logout</string>
    <string name="settings_category_other_title">Other</string>
    <!--Preferences-->
    <string name="settings_category_general_title">General Settings</string>
    <string name="settings_category_general_key">general_settings</string>
    <string-array name="unit_preference">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>
    <string-array name="unit_preference_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="theme">
        <item>Default Theme</item>
        <item>Dark Theme</item>
        <item>White Theme</item>
    </string-array>
    <string-array name="theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="settings_category_restaurant_filters_title">Restaurant Filters</string>
    <string name="settings_category_restaurant_filters_key">restaurant_filers_key</string>
    <string-array name="sort_by">
        <item>Distance</item>
        <item>Ratings</item>
        <item>Price</item>
    </string-array>
    <string-array name="sort_by_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="quick_filter">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="quick_filter_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="cuisine">
        <item>Fast Food</item>
        <item>Vegetarian</item>
        <item>Buffet</item>
        <item>Thai Food</item>
    </string-array>
    <string-array name="cuisine_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="settings_category_notifications_title">Notifications</string>
    <string name="settings_category_notifications_key">notifications_key</string>
    <string name="settings_category_security_title">Security &amp; Location</string>
    <string name="settings_category_security_key">security_key</string>
    <string name="settings_category_account_title">Account</string>
    <string name="settings_category_account_key">account_key</string>

    <!--Theming-->
    <string name="settings_app_theme">app_theme</string>
    <string name="default_theme">AppTheme</string>
    <string name="default_theme_name">Default</string>
    <string name="night_theme">Night</string>

    <!-- Business Strings -->
    <string name="business_rating_template">%.1f Stars</string>
    <string name="business_distance_template_miles">%.1f mi</string>
    <string name="navigation_restaurant_lists">Lists</string>
</resources>
